--- a/index.html
+++ b/index.html
@@ -1,79 +1,230 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8' />
+    <base href="http://clanceyp.github.io/js-xmltojson/">
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Js-xmltojson : simple javascript method to convert xml to json" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Js-xmltojson</title>
-  </head>
 
-  <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/clanceyp/js-xmltojson">View on GitHub</a>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+    <style>
+        @import "http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css";
 
-          <h1 id="project_title">Js-xmltojson</h1>
-          <h2 id="project_tagline">simple javascript method to convert xml to json</h2>
+        div.main {
+            min-height: 300px;
+            padding-bottom: 10px;
+        }
+        textarea {
+            border:1px solid #888;
+            border-radius:5px;
+            margin: 0 5px;
+            min-height: 280px;
+            min-width: 300px;
+            resize: none;
+            width:45%;
+        }
+        textarea.out {
+            background-color: #333;
+            color:#fff;
+        }
+        *.ui-resizable-handle {
+            background-color: #888;
+            opacity: 0.5;
+        }
+        *.ui-resizable-handle:hover {
+            opacity: 1
+        }
+        *.call-to-action {
+            font-size: 2em;
+            min-width: 100px;
+            width: 50%;
+        }
+        *.tac {
+            text-align: center;
+        }
+        *.tar {
+            text-align: right;
+        }
+        p.intro {
+            margin-left:10px;
+            width:70%;
+        }
+    </style>
+</head>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/clanceyp/js-xmltojson/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/clanceyp/js-xmltojson/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<body>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+    <header class="inner">
+        <a id="forkme_banner" href="https://github.com/clanceyp/js-xmltojson">View on GitHub</a>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <h1 id="project_title">Js-xmltojson</h1>
+        <h2 id="project_tagline">simple javascript method to convert xml to json</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <section id="downloads">
+            <a class="zip_download_link" href="https://github.com/clanceyp/js-xmltojson/zipball/master">Download this project as a .zip file</a>
+            <a class="tar_download_link" href="https://github.com/clanceyp/js-xmltojson/tarball/master">Download this project as a tar.gz file</a>
+        </section>
+    </header>
+</div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+        <h1>
+            <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>
+            Simple XML to JSON
+        </h1>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <p class="intro">I needed a very simple XML to JSON formatter and couldn't find a
+            standard implementation. So I settled on a very simple format which
+            creates new nodes from node attributes in the format
+            [node-name]@[attribute-name], this works out quite nicely especially
+            if your using the JSON in an HTML templating language such as
+            mustache.
+            <br/>
+            Give it a go...</p>
+        <div class="outer">
+            <div class="main tac">
+                <textarea id="input"><root>
+    <item>
+        <user id="123">Billie Joe</user>
+        <address>
+            <town>Choctaw Ridge</town>
+            <state abbr="MS">Mississippi</state>
+        </address>
+    </item>
+    <item>
+        <user id="124">Becky Thompson</user>
+        <address>
+            <town>Tupelo</town>
+            <state abbr="MS">Mississippi</state>
+        </address>
+    </item>
+</root></textarea><textarea id="output" class="out"></textarea>
+            </div>
+        </div>
+        <p class="tac">
+            <input type="button" value="XML to JSON" id="process" class="call-to-action">
+        </p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+        <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+    </section>
+</div>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+    <footer class="inner">
         <p class="copyright">Js-xmltojson maintained by <a href="https://github.com/clanceyp">clanceyp</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+    </footer>
+</div>
 
+<script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-2067012-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
     
+    jQuery(document).on('click','input.call-to-action', function(){
+        var xml = null,
+                json = {};
+        try {
+            xml = jQuery.parseXML( jQuery('#input').val() );
+            json = window.xmlToJson(xml, true)
+        }catch(e){
+            console.log(e.message)
+            json = {error:e};
+        }
+        jQuery('#output')
+                .css('color', jQuery('textarea.out').css('background-color') )
+                .val( JSON.stringify(json, null, 2) )
+                .animate({
+                    color: '#fff'
+                }, 500);
+    });
 
-  </body>
+    jQuery( "div.main" ).resizable({
+        resize: function(event, ui) {
+            $('textarea').css("height",(ui.size.height - 20)+"px");
+        }, handles: "s"
+    });
+    //$( ".selector" ).resizable( "option", "handles", "n, e, s, w" );
+
+
+    /**
+     * Method coverts XML to JSQN
+     * @id  xmlToJson
+     * @memberOf window
+     * @param {object} xml The input xml
+     * @param {boolean} preserveAttributes Weather or not you need to preserve xml attributes
+     * @return {object} The json result
+     *
+     */
+    (function(window){
+        "use strict";
+        window.xmlToJson = function(xml, preserveAttributes, undefined) {
+            var obj = {};
+
+            if (xml.nodeType === 3) { // TEXT_NODE
+                return xml.nodeValue.trim();
+            } else if (xml.childNodes.length === 0) {
+                return '';
+            }
+
+            // recurs into children
+            if (xml.hasChildNodes()) {
+                for(var i = 0; i < xml.childNodes.length; i++) {
+                    var item = xml.childNodes.item(i);
+                    var nodeName = item.nodeName;
+                    if (nodeName.indexOf('@') > -1){
+                        throw new Error("XML format not supported");
+                    }
+                    if (obj[nodeName] === undefined) {
+                        if (preserveAttributes === true && item.attributes && item.attributes.length > 0){
+                            for (var j = 0; j < item.attributes.length; j++) {
+                                var attribute = item.attributes.item(j);
+                                obj[nodeName+'@'+attribute.nodeName] = attribute.nodeValue;
+                            }
+                        }
+                        if (nodeName === '#text' && !item.firstChild ){
+                            /* ignore empty text nodes */
+                        } else if (item.childNodes.length === 1 && item.firstChild.nodeName === '#text'){
+                            obj[nodeName] = ( item.firstChild.nodeValue + '' ).trim() ;
+                        } else if (item.childNodes.length > 0){
+                            obj[nodeName] = window.xmlToJson(item, true);
+                        } else {
+                            obj[nodeName] = window.xmlToJson(item, true);
+                        }
+                    } else if ( obj[nodeName] ) {
+                        if ( obj[nodeName].push === undefined) {
+                            var old = obj[nodeName];
+                            obj[nodeName] = [];
+                            obj[nodeName].push(old);
+                        }
+                        obj[nodeName].push( window.xmlToJson(item, true) );
+                    }
+                }
+            }
+            return obj;
+        };
+
+    })(window);
+
+</script>
+
+</body>
 </html>
